// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`yup number 支持 id() 1`] = `
Object {
  "data": 1,
}
`;

exports[`yup number 支持 id() 2`] = `
Object {
  "data": -1,
  "error": [ValidationError: 此项必须是一个正整数],
}
`;

exports[`yup number 支持 id() 3`] = `
Object {
  "data": 0,
  "error": [ValidationError: 此项必须是一个正整数],
}
`;

exports[`yup number 支持 id() 4`] = `
Object {
  "data": 0.5,
  "error": [ValidationError: 此项必须是一个正整数],
}
`;

exports[`yup number 支持 id() 5`] = `
Object {
  "data": 1.5,
  "error": [ValidationError: 此项必须是一个正整数],
}
`;

exports[`yup number 支持 id() 6`] = `
Object {
  "data": 100,
}
`;

exports[`yup test 第一个参数可传函数或正则 1`] = `
Object {
  "data": Object {
    "name": "de",
    "pass": "dss",
  },
  "error": [ValidationError: 姓名应该包含f],
}
`;

exports[`yup test 第一个参数可传函数或正则 2`] = `
Object {
  "data": Object {
    "name": "defl",
    "pass": "dss",
  },
  "error": [ValidationError: 密码长度应大于10],
}
`;

exports[`yup test 第一个参数可传函数或正则 3`] = `
Object {
  "data": Object {
    "name": "defl",
    "pass": "dssdllsal;;",
  },
}
`;

exports[`yup validateInOrder 正常: 姓名必填 1`] = `[ValidationError: 姓名必填]`;

exports[`yup validateInOrder 正常: 密码有误 1`] = `[ValidationError: 密码必须大于或等于100]`;

exports[`yup validateInOrderSync 正常: 姓名必填 1`] = `[ValidationError: 姓名必填]`;

exports[`yup validateInOrderSync 正常: 密码有误 1`] = `[ValidationError: 密码必须大于或等于100]`;

exports[`yup validatePlus 正常 1`] = `
Object {
  "data": Object {
    "name": "",
    "pass": 99,
  },
  "error": [ValidationError: 姓名必填],
}
`;

exports[`yup validatePlus 正常 2`] = `
Object {
  "data": Object {
    "name": "",
    "pass": 99,
  },
  "error": [ValidationError: 密码必须大于或等于100],
}
`;

exports[`yup validatePlus 正常 3`] = `
Object {
  "data": Object {
    "name": "8",
    "pass": 101,
  },
}
`;

exports[`yup validatePlus 正常 4`] = `
Object {
  "data": Object {
    "name": "8",
    "pass": 101,
    "xxx": "sss",
  },
}
`;

exports[`yup validatePlusSync 正常 1`] = `
Object {
  "data": Object {
    "name": "",
    "pass": 99,
  },
  "error": [ValidationError: 姓名必填],
}
`;

exports[`yup validatePlusSync 正常 2`] = `
Object {
  "data": Object {
    "name": "",
    "pass": 99,
  },
  "error": [ValidationError: 密码必须大于或等于100],
}
`;

exports[`yup validatePlusSync 正常 3`] = `
Object {
  "data": Object {
    "name": "8",
    "pass": 101,
  },
}
`;

exports[`yup validatePlusSync 正常 4`] = `
Object {
  "data": Object {
    "name": "8",
    "pass": 101,
    "xxx": "sss",
  },
}
`;
